<resources>
    <string name="app_name" translatable="false">Android_Teliki_v2</string>
    <string-array name="roles_array">
        <item>user</item>
        <item>employee</item>
    </string-array>
    <string-array name="events_array">
        <item>Flood</item>
        <item>Fire</item>
        <item>Earthquake</item>
        <item>Other</item>
    </string-array>
    <string name="empage">Employee Page</string>
    <string name="usn">Username</string>
    <string name="st">Stats</string>
    <string name="log">login</string>
    <string name="home">Home</string>
    <string name="comm">Comment</string>
    <string name="loc">Location</string>
    <string name="time">Timestamp</string>
    <string name="point">Points</string>
    <string name="sit">Situation</string>
    <string name="evd">Event details</string>
    <string name="evt">Event type</string>
    <string name="bck">Back</string>
    <string name="conf">Confirm</string>
    <string name="den">Deny</string>
    <string name="sip">Sign in Page</string>
    <string name="em">Email</string>
    <string name="pass">Password</string>
    <string name="sin">Sign in</string>
    <string name="wtsa">Welcome to Smart Alert</string>
    <string name="ahaa">Already have an account?</string>
    <string name="wel">Notification for the nearest dangers</string>
    <string name="dis">Floods, Fires, Earthquakes, Other natural disasters</string>
    <string name="dhaa">Dont have an account?</string>
    <string name="sup">Sign up</string>
    <string name="aep">Add event page</string>
    <string name="sub">Submit</string>
    <string name="rol">Role</string>
    <string name="usp">User page</string>
    <string name="lout">Logout</string>
    <string name="aev">Add event</string>
    <string name="earth">Earthquake</string>
    <string name="bd">Big Disaster</string>
    <string name="supp">Sign up Page</string>
    <string name="el">Greek</string>
    <string name="en">English</string>


</resources>